connected photos for promotion, product; add promotion

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,7 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": "src",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -18,23 +18,24 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@jwt-auth/*": ["src/authorization/jwt-auth/*"],
-      "@typeorm/*": ["src/database/typeorm/*"],
-      "@common-types/*": ["src/types/*"],
-      "@category/*": ["src/app/category/*"],
-      "@district/*": ["src/app/district/*"],
-      "@order/*": ["src/app/order/*"],
-      "@payment/*": ["src/app/payment/*"],
-      "@product/*": ["src/app/product/*"],
-      "@promotion/*": ["src/app/promotion/*"],
-      "@role/*": ["src/app/role/*"],
-      "@sub-category/*": ["src/app/sub-category/*"],
-      "@user/*": ["src/app/user/*"],
-      "@config/*": ["src/common/config/*"],
-      "@file/*": ["src/common/file/*"],
-      "@consts/*": ["src/common/consts/*"],
-      "@error/*": ["src/common/error/*"],
-      "@utils/*": ["src/common/utils/*"]
+      "@jwt-auth/*": ["authorization/jwt-auth/*"],
+      "@typeorm/*": ["database/typeorm/*"],
+      "@common-types/*": ["types/*"],
+      "@category/*": ["app/category/*"],
+      "@district/*": ["app/district/*"],
+      "@order/*": ["app/order/*"],
+      "@payment/*": ["app/payment/*"],
+      "@product/*": ["app/product/*"],
+      "@photos/*": ["app/photos/*"],
+      "@promotion/*": ["app/promotion/*"],
+      "@role/*": ["app/role/*"],
+      "@sub-category/*": ["app/sub-category/*"],
+      "@user/*": ["app/user/*"],
+      "@config/*": ["common/config/*"],
+      "@file/*": ["common/file/*"],
+      "@consts/*": ["common/consts/*"],
+      "@error/*": ["common/error/*"],
+      "@utils/*": ["common/utils/*"]
     }
   }
 }
