--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,24 +18,25 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@jwt-auth/*": ["authorization/jwt-auth/*"],
-      "@typeorm/*": ["database/typeorm/*"],
-      "@common-types/*": ["types/*"],
       "@category/*": ["app/category/*"],
       "@district/*": ["app/district/*"],
+      "@ingredient/*": ["app/ingredient/*"],
       "@order/*": ["app/order/*"],
       "@payment/*": ["app/payment/*"],
-      "@product/*": ["app/product/*"],
       "@photos/*": ["app/photos/*"],
+      "@product/*": ["app/product/*"],
       "@promotion/*": ["app/promotion/*"],
       "@role/*": ["app/role/*"],
       "@sub-category/*": ["app/sub-category/*"],
       "@user/*": ["app/user/*"],
+      "@jwt-auth/*": ["authorization/jwt-auth/*"],
       "@config/*": ["common/config/*"],
       "@file/*": ["common/file/*"],
       "@consts/*": ["common/consts/*"],
       "@error/*": ["common/error/*"],
-      "@utils/*": ["common/utils/*"]
+      "@utils/*": ["common/utils/*"],
+      "@typeorm/*": ["database/typeorm/*"],
+      "@common-types/*": ["types/*"]
     }
   }
 }
