--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.20.4",
+    "axios": "^1.2.1",
+    "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
+    "next": "^12.3.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
+    "recoil": "^0.7.6",
+    "sass": "^1.56.2"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
-    "next": "13.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
     "typescript": "4.8.4"
   }
 }
