--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,6 +1,7 @@
 {
   "trailingComma": "none",
   "useTabs": true,
+  "printWidth": 100,
   "semi": false,
   "tabWidth": 2,
   "jsxSingleQuote": true,
