--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,16 @@
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-accordion": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-context-menu": "^2.1.0",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-hover-card": "^1.0.2",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-label": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.1",
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.1",
     "@tanstack/react-query": "^4.20.4",
+    "@tanstack/react-query-devtools": "^4.20.4",
     "axios": "^1.2.1",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
