--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
     "react-input-mask": "^2.0.4",
+    "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
+    "react-use": "^17.4.0",
     "recoil": "^0.7.6",
     "sass": "^1.56.2",
     "sharp": "^0.31.3",
