add district and point of sale modules in nest; add services, query hooks, types for new modules;

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,6 +16,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@api/*": [
+        "app/api/*"
+      ],
       "@components/*": [
         "app/components/*"
       ],
