--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -27,6 +27,7 @@
       "@product/*": ["app/product/*"],
       "@promotion/*": ["app/promotion/*"],
       "@role/*": ["app/role/*"],
+      "@point-of-sale/*": ["app/point-of-sale/*"],
       "@sub-category/*": ["app/sub-category/*"],
       "@user/*": ["app/user/*"],
       "@jwt-auth/*": ["authorization/jwt-auth/*"],
