--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,44 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.11",
-    "@radix-ui/react-accordion": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.0.1",
-    "@radix-ui/react-context-menu": "^2.1.1",
-    "@radix-ui/react-dialog": "^1.0.2",
-    "@radix-ui/react-hover-card": "^1.0.3",
-    "@radix-ui/react-icons": "^1.1.1",
-    "@radix-ui/react-label": "^2.0.0",
-    "@radix-ui/react-select": "^1.2.0",
-    "@radix-ui/react-separator": "^1.0.1",
-    "@radix-ui/react-switch": "^1.0.1",
-    "@radix-ui/react-tabs": "^1.0.2",
-    "@tanstack/react-query": "^4.24.4",
-    "@tanstack/react-query-devtools": "^4.24.4",
-    "axios": "^1.3.2",
+    "@hookform/resolvers": "^3.0.1",
+    "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-context-menu": "^2.1.3",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-hover-card": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-separator": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.3",
+    "@tanstack/react-query": "^4.29.1",
+    "@tanstack/react-query-devtools": "^4.29.1",
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
-    "next": "^13.1.6",
+    "next": "^13.3.0",
+    "radash": "^10.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.1",
-    "react-select": "^5.7.0",
-    "react-toastify": "^9.1.1",
-    "recoil": "^0.7.6",
-    "sass": "^1.58.0",
-    "sharp": "^0.31.3",
-    "zod": "^3.20.6"
+    "react-hook-form": "^7.43.9",
+    "react-select": "^5.7.2",
+    "react-toastify": "^9.1.2",
+    "recoil": "^0.7.7",
+    "sass": "^1.61.0",
+    "sharp": "^0.32.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.33.0",
-    "eslint-config-next": "^13.1.6",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.34",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.4"
   }
 }
